# bierboerse

./: Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml
bierboerse/: bierboerse.py  main.py
bierboerse/boerse/: market.py  stock.py
bierboerse/gui/: MainWindow.py  color_box.py  stock_list.py  stock_plots.py  stock_widget.py
bierboerse/utils/: FixedLengthQueue.py  helper_funs.py  updater.py
src/: App.vue
src/assets/: main.css
src/components/: Chart.vue
